--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	</title>
 </head>
 <body>
-	<h1>
+	<h1 style="color: blue; font-family: Tahoma; text-align: center; padding: 30px; margin: 5px; 
+	border: 2px solid black; border-radius: 10px">
 	Hello there!
     </h1>
 	<p>
