Again new update

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	border: 2px solid black; border-radius: 10px">
 	Hello there!
     </h1>
-	<p>
+	<p style="color: red; font-family: Tahoma;  font-size: 350px; text-align: center; padding: 30px; margin: 5px">
 		About me!
     </p>
 	<p>
