--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	</title>
 </head>
 <body>
-	<h1 style="color: blue; font-family: Tahoma; text-align: center; padding: 30px; margin: 5px; 
-	border: 2px solid black; border-radius: 10px">
+	<h1 style="color: white; font-family: Tahoma; text-align: center; padding: 30px; margin: 5px; 
+	border: 2px solid white; border-radius: 10px">
 	Hello there!
     </h1>
-	<p style="color: red; font-family: Tahoma;  font-size: 30px; text-align: center; padding: 30px; margin: 5px">
+	<p style="color: white; font-family: Tahoma;  font-size: 30px; text-align: center; padding: 30px; margin: 5px">
 		About me!
     </p>
 	<p>
