--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<p style="color: white; font-family: Tahoma;  font-size: 30px; text-align: center; padding: 30px; margin: 5px">
 		About me!
     </p>
-	<p>
+	<p style="color: white">
 		Let me just update you about what I do in this company<br>
 		So basically I am an <b>Implementation Executive</b> for a product called <b>RetailPOS</b> of <b>Unipro</b><br>
 		company. I take care of my client till they are <b><em>GO LIVE</em></b> with our software and hand it over to<br>
