--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<title>
         KRISHNA
 	</title>
+	<li>
+		<ul style="list-style-type: none;">store</ul>
+		<ul style="list-style-type: none;">resources</ul>
+	</li>
 </head>
 <body>
 	<h1 style="color: white; font-family: Tahoma; text-align: center; padding: 30px; margin: 5px; 
