--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         KRISHNA
 	</title>
 	<li>
-		<ul style="list-style-type: none;">store</ul>
-		<ul style="list-style-type: none;">resources</ul>
+		<ul style="list-style-type: none; color: antiquewhite;">store</ul>
+		<ul style="list-style-type: none; color: antiquewhite;">resources</ul>
 	</li>
 </head>
 <body>
