--- a/index.html
+++ b/index.html
@@ -25,5 +25,5 @@
 		support after successful <b>Implementation</b>.
     </p>
 </body>
-	<button onclick="document.location='https://www.linkedin.com/in/krishna-vamshi-b23a92167/'" target="_blank">Click here!</button>
+	<button style="background-color: aqua; margin: 5px;" onclick="document.location='https://www.linkedin.com/in/krishna-vamshi-b23a92167/'" target="_blank">Click here!</button>
 </html>
