--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<ul style="list-style-type: none; color: antiquewhite;">resources</ul>
 	</li>
 	<style>
-		buttom.hover{
+		button.hover{
 			padding: 10px;
 			background-color: brown;
 			
