--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 		About me!
     </p>
 	<p style="color: white">
-		Let me just update you about what I do in this company<br>
+		<i>Let me just update you about what I do in this company<br>
 		So basically I am an <b>Implementation Executive</b> for a product called <b>RetailPOS</b> of <b>Unipro</b><br>
 		company. I take care of my client till they are <b><em>GO LIVE</em></b> with our software and hand it over to<br>
-		support after successful <b>Implementation</b>.
+		support after successful <b>Implementation</b>.</i>
     </p>
 </body>
 	<button style="background-color: aqua; margin: 5px;" class="buttom" onclick="document.location='https://www.linkedin.com/in/krishna-vamshi-b23a92167/'" target="_blank">Click here!</button>
