--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 		company. I take care of my client till they are <b><em>GO LIVE</em></b> with our software and hand it over to<br>
 		support after successful <b>Implementation</b>.</i>
     </p>
+	<style>
+		body {
+		  background-image: url('img.png');
+		}
+		</style>
 </body>
 	<button style="background-color: aqua; margin: 5px;" class="buttom" onclick="document.location='https://www.linkedin.com/in/krishna-vamshi-b23a92167/'" target="_blank">Click here!</button>
 </html>
