--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	</title>
 </head>
 <body>
+	<p style="background-image: url('img.png'); width: 60px; height: 60px;"></p>
 	<h1 style="color: white; font-family: Tahoma; text-align: center; padding: 30px; margin: 5px; 
 	border: 2px solid white; border-radius: 10px">
 	Hello there!
@@ -20,7 +21,6 @@
 		company. I take care of my client till they are <b><em>GO LIVE</em></b> with our software and hand it over to<br>
 		support after successful <b>Implementation</b>.</i>
     </p>
-	<p style="background-image: url('img.png'); width: 60px; height: 60px;">
 </body>
 	<button style="background-color: aqua; margin: 5px;" class="buttom" onclick="document.location='https://www.linkedin.com/in/krishna-vamshi-b23a92167/'" target="_blank">Click here!</button>
 </html>
