--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
 		About me!
     </p>
 	<p style="color: white">
-		<i>Let me just update you about what I do in this company<br>
-		So basically I am an <b>Implementation Executive</b> for a product called <b>RetailPOS</b> of <b>Unipro</b><br>
-		company. I take care of my client till they are <b><em>GO LIVE</em></b> with our software and hand it over to<br>
-		support after successful <b>Implementation</b>.</i>
+		HELLO PEEPS! How are ya all doing!??
+		Are ya having fun?
+		Let's have some freaking sex!!!!!!!!
+		Less go!!!!!!!!!
     </p>
-
 </body>
 	<button style="background-color: aqua; margin: 5px;" class="buttom" onclick="document.location='https://www.linkedin.com/in/krishna-vamshi-b23a92167/'" target="_blank">Click here!</button>
 </html>
