--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 	border: 2px solid white; border-radius: 10px">
 	Hello there!
     </h1>
-	<p style="color: white; font-family: Tahoma;  font-size: 30px; text-align: center; padding: 30px; margin: 5px">
+	<p style="color: white; font-family: Tahoma;  font-size: 100px; text-align: center; padding: 30px; margin: 5px">
 		About me!
     </p>
-	<p style="color: white">
-		HELLO PEEPS! How are ya all doing!??
-		Are ya having fun?
-		Let's have some freaking sex!!!!!!!!
-		Less go!!!!!!!!!
+	<p style="color: red">
+		Hello Motherfuckers!!!!!!!!!!!!!!!!!!!!!!!
+		How you all doing? 
+		You still didn't get any bitches?!!!!!!!!!!!!!
+		Hahahahahah
+		Shame on you cunts!!!!!!!!!!!!!!!!!!!!!!!
     </p>
 </body>
 	<button style="background-color: aqua; margin: 5px;" class="buttom" onclick="document.location='https://www.linkedin.com/in/krishna-vamshi-b23a92167/'" target="_blank">Click here!</button>
