--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<p style="color: white; font-family: Tahoma;  font-size: 100px; text-align: center; padding: 30px; margin: 5px">
 		About me!
     </p>
-	<p style="color: red">
+	<p style="color: red; font-family: Tahoma;  font-size: 100px; text-align: center; padding: 30px; margin: 5px">
 		Hello Motherfuckers!!!!!!!!!!!!!!!!!!!!!!!
 		How you all doing? 
 		You still didn't get any bitches?!!!!!!!!!!!!!
