--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
 		About me!
     </p>
 	<p style="color: red; font-family: Tahoma;  font-size: 100px; text-align: center; padding: 30px; margin: 5px">
-		Hello Motherfuckers!!!!!!!!!!!!!!!!!!!!!!!
-		How you all doing? 
-		You still didn't get any bitches?!!!!!!!!!!!!!
-		Hahahahahah
-		Shame on you cunts!!!!!!!!!!!!!!!!!!!!!!!
+		Hello there, hope you are doing well.
+		Do not get negative thoughts about your life.
+		You will get better things in upcoming future!
 <select>
   <option value="option1">Option 1</option>
   <option value="option2">Option 2</option>
