--- a/index.html
+++ b/index.html
@@ -25,5 +25,5 @@
 </select>
     </p>
 </body>
-	<button style="background-color: aqua; margin: 5px;" class="buttom" onclick="document.location='https://www.linkedin.com/in/krishna-vamshi-b23a92167/'" target="_blank">Click here!</button>
+<input type="button" value="Click Here!" onclick="window.open('https://www.linkedin.com/in/krishna-vamshi-b23a92167/')" />	
 </html>
