--- a/index.html
+++ b/index.html
@@ -7,22 +7,17 @@
 	</title>
 </head>
 <body>
-	<h1 style="color: white; font-family: Tahoma; text-align: center; padding: 30px; margin: 5px; 
-	border: 2px solid white; border-radius: 10px">
+	<h1 style="color: black; font-family: Tahoma; text-align: center; padding: 30px; margin: 5px; 
+	border: 2px solid red; border-radius: 10px">
 	Hello there!
     </h1>
-	<p style="color: white; font-family: Tahoma;  font-size: 100px; text-align: center; padding: 30px; margin: 5px">
+	<p style="color: red; font-family: Tahoma;  font-size: 100px; text-align: center; padding: 30px; margin: 5px">
 		About me!
     </p>
 	<p style="color: red; font-family: Tahoma;  font-size: 100px; text-align: center; padding: 30px; margin: 5px">
 		Hello there, hope you are doing well.
 		Do not get negative thoughts about your life.
 		You will get better things in upcoming future!
-<select>
-  <option value="option1">Option 1</option>
-  <option value="option2">Option 2</option>
-  <option value="option3">Option 3</option>
-</select>
     </p>
 </body>
 <input type="button" value="Click Here!" onclick="window.open('https://www.linkedin.com/in/krishna-vamshi-b23a92167/')" />	
